[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/Characters/Enemies/boss-cocodaemon/Cacodaemon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemies/Boss/Cocodeamon.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=42]
radius = 17.0074

[sub_resource type="Animation" id=21]
length = 0.001

[sub_resource type="Animation" id=22]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=33]
resource_name = "dead"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31, 31, 31, 31, 31, 31, 31, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeadSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=34]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 19, 18, 17, 18, 18, 18, 18, 19 ]
}

[sub_resource type="Animation" id=23]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=28]
states/attack/node = SubResource( 24 )
states/attack/position = Vector2( 172, 174 )
states/dead/node = SubResource( 35 )
states/dead/position = Vector2( 496, 198 )
states/hurt/node = SubResource( 36 )
states/hurt/position = Vector2( 487, 37 )
states/idle/node = SubResource( 25 )
states/idle/position = Vector2( 172, 42 )
transitions = [ "idle", "attack", SubResource( 26 ), "attack", "idle", SubResource( 27 ), "idle", "hurt", SubResource( 37 ), "hurt", "idle", SubResource( 38 ), "hurt", "dead", SubResource( 39 ), "attack", "hurt", SubResource( 40 ), "hurt", "attack", SubResource( 41 ) ]
start_node = "idle"
end_node = "dead"

[sub_resource type="AnimationNodeStateMachinePlayback" id=29]

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 14.75, 19.25 )

[node name="CocoDamon" type="KinematicBody2D"]
position = Vector2( -1, 0 )
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.5, -3 )
texture = ExtResource( 1 )
hframes = 8
vframes = 4
frame = 5

[node name="DeadArea" type="Area2D" parent="Sprite" groups=["Enemies"]]
position = Vector2( 1.5, 3 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/DeadArea"]
position = Vector2( 6, 1 )
shape = SubResource( 42 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 21 )
anims/attack = SubResource( 22 )
anims/dead = SubResource( 33 )
anims/hurt = SubResource( 34 )
anims/idle = SubResource( 23 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 28 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.25, 0.25 )
shape = SubResource( 43 )

[node name="DamageSwordSound" type="AudioStreamPlayer2D" parent="."]
volume_db = 12.0

[node name="DamageSwordSound2" type="AudioStreamPlayer2D" parent="."]

[node name="DeadSound" type="AudioStreamPlayer" parent="."]

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
pitch_scale = 0.83

[node name="RayCollR" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 85.5, 0 )
collision_mask = 16

[node name="RayCollL" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -62, 0 )
collision_mask = 16

[connection signal="area_entered" from="Sprite/DeadArea" to="." method="_on_DeadArea_area_entered"]
